making the site outline n stuff

--- a/index.html
+++ b/index.html
@@ -16,8 +16,23 @@
   </head>
   <body>
     <main>
-      <h1>Impromptu</h1>
-      <h6>do you ever feel like there's nothing for you to do?</h6>
+      <h1
+        style="
+          text-align: center;
+          font-size: 80px;
+          text-shadow: 0 0 10px rgb(0, 255, 132),
+            0 0 20px rgba(0, 213, 255, 0.604), 0 0 30px rgb(162, 255, 0);
+        "
+      >
+        Impromptu
+      </h1>
+      <h6 style="font-size: 15px; text-align: center">
+        <em>do you ever feel like there's nothing for you to do?</em>
+      </h6>
+      <h6 style="font-size: 15px; text-align: center">
+        well, here are some
+        <a href="smth.html">conversation starters</a> for you!
+      </h6>
     </main>
     <script src="index.js"></script>
   </body>
