did literally nothing

--- a/smth.html
+++ b/smth.html
@@ -38,8 +38,7 @@
         <div class="back" style="background-color: rgb(23, 19, 127)">
           <h1 style="padding: 50px">double the trouble</h1>
           <p style="padding: 50px; margin-top: -95px">
-            you and your friend won't be bored, that's for sure! get ready to
-            have some fun...
+            you and your friend won't be bored, that's for sure.
           </p>
         </div>
       </div>
@@ -51,10 +50,9 @@
           <h1 style="padding: 50px; color: black">multiplayer</h1>
         </div>
         <div class="back" style="background-color: rgb(89, 23, 151)">
-          <h1 style="padding: 50px">double the trouble</h1>
+          <h1 style="padding: 50px">the more, the merrier</h1>
           <p style="padding: 50px; margin-top: -95px">
-            you and your friend won't be bored, that's for sure! get ready to
-            have some fun...
+            no teams - it's everyone for themselves (may the best one win).
           </p>
         </div>
       </div>
