added cards and styling to them

--- a/smth.html
+++ b/smth.html
@@ -26,6 +26,11 @@
             who knows, maybe this is the perfect opportunity to get to know
             yourself better.
           </p>
+          <button>
+            <a style="color: black; text-decoration: none" href="game1.html">
+              start game</a
+            >
+          </button>
         </div>
       </div>
     </div>
@@ -40,6 +45,11 @@
           <p style="padding: 50px; margin-top: -95px">
             you and your friend won't be bored, that's for sure.
           </p>
+          <button>
+            <a style="color: black; text-decoration: none" href="game2.html">
+              start game</a
+            >
+          </button>
         </div>
       </div>
     </div>
@@ -54,6 +64,11 @@
           <p style="padding: 50px; margin-top: -95px">
             no teams - it's everyone for themselves (may the best one win).
           </p>
+          <button>
+            <a style="color: black; text-decoration: none" href="game3.html">
+              start game</a
+            >
+          </button>
         </div>
       </div>
     </div>
